--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+/*
+ *= require jquery-ui
+ */
 //@import "bootstrap-sprockets";
 //@import "bootstrap";
 
@@ -50,6 +53,22 @@
     padding: 1em 2em;
     width: 13em;
     background: #141;
+
+    form, div {
+      display: inline;
+    }
+    input {
+      font-size: small;
+    }
+    #cart {
+      font-size: smaller;
+      color: white;
+      table {
+        border-top: 1px dotted #595;
+        border-bottom:  1px dotted #595;
+        margin-bottom: 10px;
+      }
+    }
 
     ul {
       padding: 0;
