User control, mail and internationalization done

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,11 @@
   color: #282;
   text-align: center;
 
+  .locale {
+    float: right;
+    margin: -0.25em 0.1em
+  }
+
   img {
     float: left;
   }
@@ -114,4 +119,6 @@
       display: none
     }
   }
+
+
 }
